log/build_2024-11-21_16-15-41/mypkg/stderr.log
  File "/home/yuki/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/listener.py", line 12
    node.get_logger().info("Listen: %ds % msg)
                                             ^
SyntaxError: EOL while scanning string literal

